[gd_scene load_steps=2 format=3 uid="uid://n44d53us24uu"]

[ext_resource type="Script" path="res://addons/assembler/assembler_panel.gd" id="1_ol4vp"]

[node name="Assembler Plugin" type="Panel"]
offset_right = 220.0
offset_bottom = 340.0
script = ExtResource("1_ol4vp")

[node name="Root VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons VBoxContainer" type="VBoxContainer" parent="Root VBoxContainer"]
layout_mode = 2

[node name="Build Button" type="Button" parent="Root VBoxContainer/Buttons VBoxContainer"]
layout_mode = 2
text = "Build"

[node name="Rebuild All Button" type="Button" parent="Root VBoxContainer/Buttons VBoxContainer"]
layout_mode = 2
text = "Rebuild All"

[node name="Refresh Button" type="Button" parent="Root VBoxContainer/Buttons VBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="ScrollContainer" type="ScrollContainer" parent="Root VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Files VBoxContainer" type="VBoxContainer" parent="Root VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Root VBoxContainer/Buttons VBoxContainer/Build Button" to="." method="_on_build_button_pressed"]
[connection signal="pressed" from="Root VBoxContainer/Buttons VBoxContainer/Rebuild All Button" to="." method="_on_rebuild_all_button_pressed"]
[connection signal="pressed" from="Root VBoxContainer/Buttons VBoxContainer/Refresh Button" to="." method="_on_refresh_button_pressed"]
